--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       font-family: Arial, sans-serif;
       background-color: #f4f4f4;
       color: #333;
+      text-align: center;
     }
     header {
       background-color: #263238;
@@ -17,10 +18,11 @@
       padding: 1rem 2rem;
       display: flex;
       align-items: center;
-      justify-content: space-between;
+      justify-content: center;
+      flex-direction: column;
     }
     header h1 {
-      margin: 0;
+      margin: 0.5rem 0;
       font-size: 1.8rem;
     }
     header img {
@@ -32,7 +34,7 @@
     }
     nav a {
       color: white;
-      margin-right: 1.5rem;
+      margin: 0 1rem;
       text-decoration: none;
       font-weight: bold;
     }
@@ -52,9 +54,11 @@
     .card {
       background-color: white;
       padding: 1.5rem;
-      margin-top: 1rem;
+      margin: 1rem auto 0 auto;
       border-radius: 8px;
       box-shadow: 0 0 15px rgba(0,0,0,0.1);
+      max-width: 700px;
+      text-align: left;
     }
     h2 {
       color: #00695c;
@@ -77,47 +81,6 @@
     <section id="home">
       <h2>O společnosti Palmectro a.s.</h2>
       <div class="card">
-        <p>Palmectro a.s. je přední technologická a servisní společnost působící ve městě Los Santos. Zaměřujeme se na vývoj, infrastrukturu a technické zabezpečení veřejných i soukromých projektů. Naším cílem je inovace, stabilita a profesionální přístup.</p>
-      </div>
-    </section>
-
-    <section id="sluzby">
-      <h2>Naše služby</h2>
-      <div class="card">
-        <ul>
-          <li>Instalace a údržba městské infrastruktury</li>
-          <li>Servis elektronických a IT systémů</li>
-          <li>Bezpečnostní technologie pro firmy i občany</li>
-          <li>Vývoj a podpora softwarových řešení</li>
-        </ul>
-      </div>
-    </section>
-
-    <section id="projekty">
-      <h2>Realizované projekty</h2>
-      <div class="card">
-        <p>Palmectro se podílelo na výstavbě městského kamerového systému, modernizaci nemocniční techniky a návrhu zabezpečovacích systémů pro policejní oddělení. Spolupracujeme s veřejným sektorem i soukromými firmami.</p>
-      </div>
-    </section>
-
-    <section id="tym">
-      <h2>Náš tým</h2>
-      <div class="card">
-        <p>Náš tým tvoří odborníci z oblasti techniky, IT, elektroinženýrství a projektového managementu. Každý člen přispívá k růstu společnosti svou specializací a vášní pro technologii.</p>
-      </div>
-    </section>
-
-    <section id="kontakt">
-      <h2>Kontakt</h2>
-      <div class="card">
-        <p>Sídlo: Palmetto Avenue 142, Los Santos</p>
-        <p>Telefon: +420 123 456 789</p>
-        <p>Email: <a href="mailto:info@palmectro.cz">info@palmectro.cz</a></p>
-      </div>
-    </section>
-  </main>
-  <footer>
-    &copy; 2025 Palmectro a.s. Všechna práva vyhrazena.
-  </footer>
+        <p>Palmectro a.s. je přední technologická a servisní společnost působící ve městě Los Santos. Zaměřujeme se na vývoj, infrastrukturu a technické zabezpečení veřejných i soukromých projektů. Naším cílem je inovace,
 </body>
 </html>
